Cleanup after product image uploads
